# Rust

./: .gitignore  .output.txt  Cargo.toml  README.md
.cargo/: config.toml
01-guessing-game/: Cargo.toml  README.md
01-guessing-game/src/: main.rs
02-web-server/: .gitignore  ArchitectureGuide.md  README.md  test_api.sh
03-web-server/: ArchitectureGuide.md  Cargo.toml  README.md
03-web-server/src/: auth.rs  handlers.rs  lib.rs  main.rs  models.rs  repository.rs
03-web-server/tests/: api.rs
04-web-server/: .env.example  ArchitectureGuide.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
04-web-server/migrations/: 001_create_users.sql  002_indexes.sql
04-web-server/src/: auth.rs  config.rs  handlers.rs  lib.rs  main.rs  models.rs  repository.rs
web-server-01/: Cargo.toml  README.md
web-server-01/src/: main.rs
